--- a/templates/login.html
+++ b/templates/login.html
@@ -26,6 +26,6 @@
             </ul>
         {% endif %}
     {% endwith %}
-    <p>Don't have an account? <a href="/register">Create one here.</a></p>  <!-- Link to register page -->
+    <p>Don't have an account? <a href="/register">Create one here.</a></p>
 </body>
 </html>
