--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Welcome, {{ username }}!</h1>
+    <p>This is your dashboard where you can manage your financial budgeting.</p>
     <a href="/logout">Logout</a>
 </body>
 </html>
