--- a/templates/index.html
+++ b/templates/index.html
@@ -78,4 +78,11 @@
         }
     </style>
 </body>
+<script>
+    fetch('/data')
+        .then(response => response.json())
+        .then(data => {
+            document.getElementById('data').innerText = JSON.stringify(data, null, 2);
+        });
+</script>
 </html>
