--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
-* 
-{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -11,22 +11,18 @@
     font-family: "Poppins", sans-serif;
 }
 
-:root 
-{
+:root {
     --bg-color: #ffff;
     --primary-color: #0aa45f;
     --text-color: #333333;
     --error-warning: #FF6B6B;
 }
 
-
-html
-{
+html {
     font-size: 62.5%;
 }
 
-header 
-{
+header {
     position: fixed;
     top: 0;
     left: 0;
@@ -45,21 +41,19 @@ header .logo {
     align-items: center;
 }
 
-header .logo h1 
-{
+header .logo h1 {
     font-size: 2.5rem;
     margin-left: 2rem;
     font-weight: bold;
 }
-header .buttons 
-{
+
+header .buttons {
     display: flex;
     align-items: center;
     gap: 4rem;
 }
 
-header .buttons a 
-{
+header .buttons a {
     text-decoration: none;
     padding: 10px 20px;
     font-size: 1.5rem;
@@ -69,24 +63,31 @@ header .buttons a
     transition: background-color 0.3s;
 }
 
-
 header .buttons a:hover {
     background-color: var(--primary-color);
     color: #fff;
 }
 
+#menu-icon {
+    font-size: 3.6rem;
+    color: var(--text-color);
+    display: none; /* Hide by default */
+}
 
 
-.main-container 
-{
+
+.show {
+    display: block; /* Show dropdown */
+}
+
+.main-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 23rem;
 }
 
-.text-content 
-{
+.text-content {
     max-width: 50%;
     padding-right: 20px;
     padding: 50px;
@@ -107,8 +108,7 @@ header .buttons a:hover {
     color: #444;
 }
 
-.watch-video-btn 
-{
+.watch-video-btn {
     display: inline-block;
     padding: 10px 20px;
     background-color: #0aa45f;
@@ -126,26 +126,73 @@ header .buttons a:hover {
 .image-content {
     max-width: 50%;
     padding-right: 100px;
+    margin-top: -10rem;
 }
 
-.image-content img {
+.image-content img 
+{
     width: 100%;
-    border: .5rem solid var(--main-color);
-    border-radius: 74% 26% 40% 60% / 63% 45% 55% 37% ;
+    border-radius: 74% 26% 40% 60% / 63% 45% 55% 37%;
     box-shadow: 0 7px 25px rgba(0, 0, 0, 0.2);
     height: 500px;
-    margin-top: -5rem;
 }
-
 
 .full-width-image {
-    display: none; /* Hide full-width image by default */
-    width: 100%; /* Make it full width */
+    display: none; 
+    width: 100%; 
 }
 
-footer p {
-    margin: 0;
+
+.services-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+    transition: 0.3s ease;
+    margin-bottom: 5rem;
+    padding: 2rem 10%;
+    cursor: pointer;
 }
+.heading
+{
+    font-size: 4.5rem;
+    text-align: center;
+    margin-top: 10rem;
+}
+
+
+.services-container .services-box 
+{
+    flex: 1 1 30rem;
+    background: var(--bg-color); 
+    padding: 3rem 2rem 4rem;
+    border-radius: 2rem;
+    text-align: center;
+}
+
+.services-box i
+{
+    font-size: 6rem;
+    color: var(--primary-color); 
+}
+
+.services-box h3 {
+    font-size: 2.2rem;
+    color: var(--primary-color); 
+}
+
+.services-box p {
+    font-size: 1.6rem;
+    margin: 1rem 0 3rem;
+    color: var(--text-color); 
+}
+
+.services-container .services-box:hover {
+    transform: scale(1.1);
+}
+
+
 
 @media (max-width: 1252px) {
     .hide-image {
@@ -162,6 +209,10 @@ footer p {
         margin-top: 15rem;
         min-height: auto; 
         width: 100%;
+    }
+    .image-shown
+    {
+        margin-top: 7rem;
     }
 
     .text-content {
@@ -183,65 +234,144 @@ footer p {
     }
 }
 
-
-@media (max-width: 560px)
+@media(max-width: 775px)
 {
-
-    header .logo h1 
+    .services-container .services-box 
     {
+        border: 1px solid var(--primary-color);
+    }
+}
+
+@media (max-width: 560px) 
+{
+    header .logo h1 {
         font-size: 2.1rem;
     }
 
-    header .buttons a 
-    {
-    text-decoration: none;
-    padding: 10px 20px;
-    font-size: 1.2rem;
-    border-radius: 5px;
-    color: #333;
-    background-color: #d8e3d5;
-    transition: background-color 0.3s;
+    header .buttons a {
+        text-decoration: none;
+        padding: 10px 20px;
+        font-size: 1.2rem;
+        border-radius: 5px;
+        color: #333;
+        background-color: #d8e3d5;
+        transition: background-color 0.3s;
     }
 
-    .main-container
-    {
+    .main-container {
         margin-top: 5rem;
         padding: 2rem 1%;
     }
-    .text-content
-    {
+
+    .text-content {
         padding: 6rem 2%;
         margin-left: 1rem;
         margin-top: 2rem;
     }
-    .text-content h1
-    {
+
+    .text-content h1 {
         font-size: 3rem;
     }
-    .text-content p 
-    {
+
+    .text-content p {
         font-size: 1.5rem;
     }
-    .watch-video-btn 
-    {
+
+    .watch-video-btn {
         font-size: 1.5rem;
-       
     }
+
+    /* Hide buttons */
+    .buttons {
+        display: none; 
+    }
+
+
 }
 
-@media (max-width: 460px)
+@media (max-width: 483px) 
 {
     html 
     {
         font-size: 45%;
     }
+
+    .heading
+    {
+        font-size: 3rem;
+        margin-top: 5rem;
+    }
+
+    .services-box h3
+    {
+        font-size: 2rem;
+    }
+
+    .services-box i
+    {
+        font-size: 4rem;
+    }
+    
+
+    .main-container {
+        flex-direction: column;
+        margin-top: 2rem;
+        width: 100%;
+    }
+
+    .text-content h1 {
+        font-size: 2.5rem;
+    }
+
+    .text-content p {
+        font-size: 1.4rem;
+    }
+
+    header .buttons a {
+        background-color: var(--bg-color);
+        color: #333; /* Ensure text color is set */
+        transition: none; /* Remove transition effects */
+    }
+
+    header .buttons a:hover {
+        background-color: var(--bg-color);
+        color: var(--text-color);
+    }
+
+    #menu-icon
+    {
+        display: block;
+    }
+
+    .dropdown {
+        position: absolute;
+        top: 100%;
+        left: 50%;
+        width: 50%;
+        padding: 1rem 3%;
+        background: var(--bg-color);
+        border-top: .1rem solid rgba(0, 0, 0, .2);
+        box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
+        display: none;
+    }
+    
+    .dropdown.active {
+        display: block; /* Show dropdown when active */
+    }
+    
+    .dropdown .buttons {
+        display: flex; /* Ensure buttons are displayed as flex items */
+        flex-direction: column; /* Stack buttons vertically */
+        gap: 1rem; /* Space between buttons */
+    }
     
 }
 
-@media (max-width: 377px)
+
+@media(max-width: 311px)
 {
-    header .buttons 
-    {
-        gap: 1rem;
+    header .logo h1 {
+        margin-left: 0rem;
+        font-weight: bold;
     }
 }
