--- a/templates/register.html
+++ b/templates/register.html
@@ -47,7 +47,7 @@
         <p>Already have an account? <a href="/login"><span style="color: #0aa45f; font-size: 14px; text-decoration: underline; margin-left: 10px;">Login here.</span></a></p>
     </div>
 
-    <<script>
+<script>>
         document.addEventListener('DOMContentLoaded', function() {
             const alertMessages = document.querySelector('.alert-messageRegister');
             const alertOkButton = document.querySelector('.alert-ok-buttonRegister');
